[tool.poetry]
name = "iot-utils"
version = "0.5.2"
description = ""
authors = ["Thomas Kleinöder <devel@time4oss.de>"]
readme = "README.md"
packages = [{include = "iot_utils"}]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
awsiotsdk = "^1.19.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic-settings = "^2.0.3"
fastapi = "^0.104.1"
ping3 = "^4.0.4"
psutil = "^5.9.6"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
httpx = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

