[tool.poetry]
name = "iot-utils"
version = "0.5.3"
description = ""
authors = ["Thomas Kleinöder <devel@time4oss.de>"]
readme = "README.md"
packages = [{include = "iot_utils"}]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1"
awsiotsdk = "^1.19.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic-settings = "^2.2.1"
fastapi = "^0.110.0"
ping3 = "^4"
psutil = "^5"
uvicorn = "^0.28.0"
httpx = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

