[tool.poetry]
name = "iot-utils"
version = "0.5.4"
description = ""
authors = ["Thomas Kleinöder <devel@time4oss.de>"]
readme = "README.md"
packages = [{include = "iot_utils"}]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = "^1"
awsiotsdk = "^1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic-settings = "^2"
fastapi = "*"
ping3 = "*"
psutil = "^5"
uvicorn = "*"
httpx = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

